terminada la maquetacion de la pagina

--- a/index.html
+++ b/index.html
@@ -5,15 +5,65 @@
 	<title>Marcelo Reviews</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="estilo.css">
 </head>
 <body>
 
 	<div class="container">
-		<div class="row">
-			<div class="col mt-2">
-				<h1>Hola mundo</h1>
+		<header class="row mt-2 no-gutters" id="encabezado">
+			<div class="col">				
+					<img src="img/marce.png" width="70" alt="Logo" class="p-1 ml-5">
+					<h1 class="float-right pt-5 mr-5">Chuchito´s Reviews</h1>									
+			</div>
+		</header>
+
+		<div class="row" id="menu">
+			<div class="col no-gutters">
+				<nav class="lnavbar nav bg-danger justify-content-center">
+					<a href="" class="nav-link">Inicio</a>
+					<a href="" class="nav-link">Acerca de Mi</a>
+					<a href="comentarios.html" class="nav-link">Comentarios</a>
+					<a href="" class="nav-link">Donde Estoy</a>
+				</nav>
 			</div>
 		</div>
+
+		<section class="row nomargenblanco" id="principal">
+			<main class="col-8 p-4">
+				<h2>Hello!!</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat culpa vitae in modi ipsa saepe, reprehenderit minus, quis animi inventore accusantium cum. Deleniti saepe nam, eius sunt velit, sit iste?</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat culpa vitae in modi ipsa saepe, reprehenderit minus, quis animi inventore accusantium cum. Deleniti saepe nam, eius sunt velit, sit iste?</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat culpa vitae in modi ipsa saepe, reprehenderit minus, quis animi inventore accusantium cum. Deleniti saepe nam, eius sunt velit, sit iste?</p>
+			</main>
+			<aside class="col-4 p-5">
+				<h2 class="text-center">Mi Violin</h2>
+				<hr>
+				<img src="img/corsa.jpg" alt="mi violin" class="img-fluid">
+			</aside>
+		</section>
+
+		<section class="row justify-content-between nomargenblanco mt-2 p-1" id="gadgets">
+			<div class="col-3">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus corrupti, cupiditate iusto ad nobis. Sequi voluptatum, neque aliquid earum. Corrupti quisquam neque dolor cumque molestias animi et, excepturi eveniet harum.</p>
+			</div>
+			<div class="col-3">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus corrupti, cupiditate iusto ad nobis. Sequi voluptatum, neque aliquid earum. Corrupti quisquam neque dolor cumque molestias animi et, excepturi eveniet harum.</p>
+			</div>
+			<div class="col-3">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus corrupti, cupiditate iusto ad nobis. Sequi voluptatum, neque aliquid earum. Corrupti quisquam neque dolor cumque molestias animi et, excepturi eveniet harum.</p>
+			</div>
+		</section>
+
+		<footer class="row nomargenblanco">
+			<div class="col text-center">
+				<p class="m-0">COPYRIGHT Lord Vader 87</p>
+			</div>
+		</footer>
+
+
+
+
+
 	</div>
 	
 
